--- a/apitest/src/main/resources/preReg/UpdatePreregistration/UpdatePreregistration.yml
+++ b/apitest/src/main/resources/preReg/UpdatePreregistration/UpdatePreregistration.yml
@@ -1,6 +1,7 @@
 UpdatePreregistration:
    Prereg_UpdatePrereg_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/applications/prereg/{preRegistrationId}
+      description: Update demographic data for a new preregistration application
       role: batch
       restMethod: put
       inputTemplate: preReg/UpdatePreregistration/updatePreregistration
@@ -22,6 +23,7 @@ UpdatePreregistration:
 }'
    Prereg_UpdatePrereg_All_Valid_Smoke_BookByPRID_sid:
       endPoint: /preregistration/v1/applications/prereg/{preRegistrationId}
+      description: Update the demographic data for booking an appointment with the new PRID
       role: batch
       restMethod: put
       inputTemplate: preReg/UpdatePreregistration/updatePreregistration
@@ -43,6 +45,7 @@ UpdatePreregistration:
 }'
    Prereg_UpdatePrereg_inValid_dateOfBirth_sid:
       endPoint: /preregistration/v1/applications/prereg/{preRegistrationId}
+      description: Update the demographic data with an invalid date of birth
       role: batch
       restMethod: put
       inputTemplate: preReg/UpdatePreregistration/updatePreregistration
@@ -68,6 +71,7 @@ UpdatePreregistration:
 }'
    Prereg_UpdatePrereg_missing_Version_sid:
       endPoint: /preregistration/v1/applications/prereg/{preRegistrationId}
+      description: Update the demographic data with a missing version number
       role: batch
       restMethod: put
       inputTemplate: preReg/UpdatePreregistration/updatePreregistration
@@ -93,6 +97,7 @@ UpdatePreregistration:
 }'
    Prereg_UpdatePrereg_invalid_Version_sid:
       endPoint: /preregistration/v1/applications/prereg/{preRegistrationId}
+      description: Update the demographic data with an invalid version 
       role: batch
       restMethod: put
       inputTemplate: preReg/UpdatePreregistration/updatePreregistration
@@ -118,6 +123,7 @@ UpdatePreregistration:
 }'
    Prereg_UpdatePrereg_invalid_email_sid:
       endPoint: /preregistration/v1/applications/prereg/{preRegistrationId}
+      description: Update the demographic data with an invalid email address
       role: batch
       restMethod: put
       inputTemplate: preReg/UpdatePreregistration/updatePreregistration
@@ -143,6 +149,7 @@ UpdatePreregistration:
 }'
    Prereg_UpdatePrereg_missing_langCode_sid:
       endPoint: /preregistration/v1/applications/prereg/{preRegistrationId}
+      description: Update the demographic data with an missing language code 
       role: batch
       restMethod: put
       inputTemplate: preReg/UpdatePreregistration/updatePreregistration
@@ -168,6 +175,7 @@ UpdatePreregistration:
 }'
    Prereg_UpdatePrereg_INVALID_langCode_sid:
       endPoint: /preregistration/v1/applications/prereg/{preRegistrationId}
+      description: Update the demographic data with an invalid language code
       role: batch
       restMethod: put
       inputTemplate: preReg/UpdatePreregistration/updatePreregistration
@@ -193,6 +201,7 @@ UpdatePreregistration:
 }'
    Prereg_UpdatePrereg_INVALID_requesttime_sid:
       endPoint: /preregistration/v1/applications/prereg/{preRegistrationId}
+      description: Update the demographic data with an invalid request time
       role: batch
       restMethod: put
       inputTemplate: preReg/UpdatePreregistration/updatePreregistration
@@ -218,6 +227,7 @@ UpdatePreregistration:
 }'
    Prereg_UpdatePrereg_Missing_requesttime_sid:
       endPoint: /preregistration/v1/applications/prereg/{preRegistrationId}
+      description: Update the demographic data without a request time
       role: batch
       restMethod: put
       inputTemplate: preReg/UpdatePreregistration/updatePreregistration
@@ -243,6 +253,7 @@ UpdatePreregistration:
 }'
    Prereg_UpdatePrereg_previous_date_sid:
       endPoint: /preregistration/v1/applications/prereg/{preRegistrationId}
+      description: Update the demographic data with a past date
       role: batch
       restMethod: put
       inputTemplate: preReg/UpdatePreregistration/updatePreregistration
@@ -268,6 +279,7 @@ UpdatePreregistration:
 }'
    Prereg_UpdatePrereg_invalid_id_sid:
       endPoint: /preregistration/v1/applications/prereg/{preRegistrationId}
+      description: Update the demographic data with an invalid ID
       role: batch
       restMethod: put
       inputTemplate: preReg/UpdatePreregistration/updatePreregistration
@@ -293,6 +305,7 @@ UpdatePreregistration:
 }'
    Prereg_UpdatePrereg_missing_id_sid:
       endPoint: /preregistration/v1/applications/prereg/{preRegistrationId}
+      description: Update the demographic data with a missing ID
       role: batch
       restMethod: put
       inputTemplate: preReg/UpdatePreregistration/updatePreregistration
@@ -318,6 +331,7 @@ UpdatePreregistration:
 }'
    Prereg_UpdatePrereg_blank_id_sid:
       endPoint: /preregistration/v1/applications/prereg/{preRegistrationId}
+      description: Update the demographic data with a blank ID
       role: batch
       restMethod: put
       inputTemplate: preReg/UpdatePreregistration/updatePreregistration
@@ -343,6 +357,7 @@ UpdatePreregistration:
 }'
    Prereg_UpdatePrereg_update_date_without_Status_change_sid:
       endPoint: /preregistration/v1/applications/prereg/{preRegistrationId}
+      description: Update the demographic data for date of birth without changing the status
       role: batch
       restMethod: put
       inputTemplate: preReg/UpdatePreregistration/updatePreregistration
