--- a/apitest/src/main/resources/preReg/uploadDocument/uploadDocument.yml
+++ b/apitest/src/main/resources/preReg/uploadDocument/uploadDocument.yml
@@ -1,6 +1,7 @@
 UploadDocument:
    Prereg_UploadDocument_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the valid document preregistration ID 
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -24,6 +25,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_Rebook_the_booked_appoinment_Smoke_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description:  Upload the document to rebook the booked appointment
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -47,6 +49,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_All_Valid_Smoke_POI_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description:  Upload the valid Proof of Identity (POI) document
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -70,6 +73,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_All_Valid_Smoke_POB_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description:  Upload the valid Proof of Date of Birth (POB) document
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -93,6 +97,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_All_Valid_Smoke_POR_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the valid Proof of Residence (POR) document
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -116,6 +121,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_All_Valid_Smoke_UpdateDocRefID_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: upload the valid document with the updated document reference ID
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -139,6 +145,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_All_Valid_Smoke_POI_UpdateDocRefID_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the valid Proof of Identity (POI) document with the updated reference ID
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -162,6 +169,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_All_Valid_Smoke_POB_UpdateDocRefID_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description:  Upload the valid Proof of Date of Birth (POB) document with the updated reference ID
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -185,6 +193,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_All_Valid_Smoke_POR_UpdateDocRefID_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description:  Upload the valid Proof of Residence (POR) document with the updated reference ID
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -208,6 +217,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_All_Valid_Smoke_BookByPRID_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the valid document to book an appointment using PRID
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -231,6 +241,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_All_Valid_Smoke_POI_BookByPRID_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description:  Upload the valid Proof of Identity (POI) document to book an appointment using PRID
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -254,6 +265,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_All_Valid_Smoke_POB_BookByPRID_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the valid Proof of Date of Birth (POB) document to book an appointment using PRID
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -277,6 +289,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_All_Valid_Smoke_POR_BookByPRID_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the valid Proof of Residence (POR) document to book an appointment using PRID
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -300,6 +313,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_Valid_Smoke_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the valid Proof of Address (POA) document
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -323,6 +337,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_Valid_Smoke_POI_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the valid Proof of Identity (POI) document
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -346,6 +361,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_Valid_POB_Smoke_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the valid Proof of Date of Birth (POB) document
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -369,6 +385,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_Valid_POR_Smoke_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the valid Proof of Residence (POR) document
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -392,6 +409,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_Smoke_alldel_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the Proof of Address (POA) document for deletion
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -415,6 +433,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_Smoke_POI_alldel_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the Proof of Identity (POI) document for deletion
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -438,6 +457,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_Smoke_POB_alldel_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the Proof of Date of Birth (POB) document for deletion
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -461,6 +481,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_Smoke_POR_alldel_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the Proof of Residence (POR) document for deletion
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -484,6 +505,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_Smoke_cancellappointment_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the valid Proof of Address (POA) document to cancelling the appointment
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -507,6 +529,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_Smoke_cancellappointment_POI_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the valid Proof of Address (POI) document to cancelling the appointment
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -530,6 +553,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_Smoke_cancellappointment_POB_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the valid Proof of Date of Birth (POB) document to cancel the appointment
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -553,6 +577,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_Smoke_cancellappointment_POR_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the valid Proof of Residence (POR) document to cancel the appointment
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -576,6 +601,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_Smoke_CancelApplicationsAppointment_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the valid Proof of Address (POA) document to cancel the application appointment
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -599,6 +625,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_Smoke_CancelApplicationsAppointment_POI_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the valid Proof of Identity (POI) document to cancel the application appointment
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -622,6 +649,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_Smoke_CancelApplicationsAppointment_POB_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the valid Proof of Date of Birth (POB) document to cancel the application appointment
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -645,6 +673,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_Smoke_CancelApplicationsAppointment_POR_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the valid Proof of Residence (POR) document to cancel the application appointment
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -668,6 +697,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_inValid_docTypCode_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the invalid Proof of Address (POA) document type code
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -691,6 +721,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_blank_docTypCode_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the blank Proof of Address (POA) document type code
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -714,6 +745,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_missing_docTypCode_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the Proof of Address (POA) document without the document type code
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -737,6 +769,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_blank_doccatCode_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the Proof of Address (POA) document blank the document category code
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -760,6 +793,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_missing_doccatCode_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the Proof of Address (POA) document without the document category code
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -783,6 +817,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_Invalid_doccatCode_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the Proof of Address (POA) document with the invalid document category code
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -806,6 +841,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_Invalid_langCode_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the Proof of Address (POA) document with the invalid language code 
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -830,6 +866,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_missing_langCode_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the Proof of Address (POA) document with the missing document category code
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -854,6 +891,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_inValid_id_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the Proof of Address (POA) document with an invalid ID
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -878,6 +916,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_Blank_id_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the Proof of Address (POA) document with a blank ID
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -905,6 +944,7 @@ UploadDocument:
 
    Prereg_UploadDocument_All_Valid_Smoke_expiry_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the Proof of Address (POA) document with an expired ID
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -928,6 +968,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_All_Valid_Smoke_POI_expired_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the Proof of Identity (POI) document with an expired ID
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -951,6 +992,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_All_Valid_Smoke_POB_expired_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the Proof of Date of Birth (POB) document with an expired ID
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -974,6 +1016,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_All_Valid_Smoke_POR_expired_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the Proof of Residence (POR) document with an expired ID
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -998,6 +1041,7 @@ UploadDocument:
 
    Prereg_UploadDocument_All_Valid_Smoke_cancell_pending_appoinment_prid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the Proof of Address (POA) document to cancel a pending appointment with PRID
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -1021,6 +1065,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_All_Valid_Smoke_POI_cancell_pending_appoinment_prid_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the Proof of Identity (POI) document to cancel a pending appointment with PRID
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -1044,6 +1089,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_All_Valid_Smoke_POB_cancell_pending_appoinment_prid_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the Proof of date of Birth (POB) document to cancel a pending appointment with PRID
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
@@ -1067,6 +1113,7 @@ UploadDocument:
 }'
    Prereg_UploadDocument_All_Valid_Smoke_POR_cancell_pending_appoinment_prid_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}
+      description: Upload the Proof of Residence (POR) document to cancel a pending appointment with PRID
       role: batch
       restMethod: post
       inputTemplate: preReg/uploadDocument/uploadDocument
