--- a/apitest/src/main/resources/preReg/GetAllDocForPrId/GetAllDocForPrId.yml
+++ b/apitest/src/main/resources/preReg/GetAllDocForPrId/GetAllDocForPrId.yml
@@ -1,6 +1,7 @@
 GetAllDocForPrId:
    Prereg_GetAllDocForPrId_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/documents/preregistration/{preRegistrationId}
+      description: Retrieve all documents associated with the valid Pre-Registration ID
       role: batch
       checkErrorsOnlyInResponse: true
       restMethod: get
@@ -15,6 +16,7 @@ GetAllDocForPrId:
 }'
    Prereg_GetAllDocForPrId_inValid_preRegistrationId_sid:
       endPoint: /preregistration/v1/documents/preregistration/{preRegistrationId}
+      description: Retrieve all documents associated with the invalid Pre-Registration ID
       role: batch
       restMethod: get
       inputTemplate: preReg/GetAllDocForPrId/getAllDocForPrId
