--- a/apitest/src/main/resources/preReg/GetPRIDByDateRange/GetPRIDByDateRange.yml
+++ b/apitest/src/main/resources/preReg/GetPRIDByDateRange/GetPRIDByDateRange.yml
@@ -1,6 +1,7 @@
 GetPRIDByDateRange:
    Prereg_GetPRIDByDateRange_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/sync
+      description: Retrieve the PRID within the given date range
       role: regproc
       restMethod: post
       inputTemplate: preReg/GetPRIDByDateRange/getPRIDByDateRange
@@ -18,6 +19,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_inValid_id:
       endPoint: /preregistration/v1/sync
+      description: Retrieve the PRID within the specified date range for the Invalid ID
       role: regproc
       restMethod: post
       inputTemplate: preReg/GetPRIDByDateRange/getPRIDByDateRange
@@ -39,6 +41,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_blank_id:
       endPoint: /preregistration/v1/sync
+      description: Retrieve the PRID within the specified date range for the blank ID
       role: regproc
       restMethod: post
       inputTemplate: preReg/GetPRIDByDateRange/getPRIDByDateRange
@@ -60,6 +63,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_missing_id:
       endPoint: /preregistration/v1/sync
+      description: Retrieve the PRID within the specified date range for the missing ID
       role: regproc
       restMethod: post
       inputTemplate: preReg/GetPRIDByDateRange/getPRIDByDateRange
@@ -81,6 +85,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_invalid_version:
       endPoint: /preregistration/v1/sync
+      description: Retrieve the PRID within the specified date range for the invalid version
       role: regproc
       restMethod: post
       inputTemplate: preReg/GetPRIDByDateRange/getPRIDByDateRange
@@ -102,6 +107,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_missing_version:
       endPoint: /preregistration/v1/sync
+      description: Retrieve the PRID within the specified date range for the missing version
       role: regproc
       restMethod: post
       inputTemplate: preReg/GetPRIDByDateRange/getPRIDByDateRange
@@ -123,6 +129,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_blank_version:
       endPoint: /preregistration/v1/sync
+      description: Retrieve the PRID within the specified date range for the blank version
       role: regproc
       restMethod: post
       inputTemplate: preReg/GetPRIDByDateRange/getPRIDByDateRange
@@ -144,6 +151,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_blank_requesttime:
       endPoint: /preregistration/v1/sync
+      description: Retrieve the PRID within the specified date range for the request time that is blank 
       role: regproc
       restMethod: post
       inputTemplate: preReg/GetPRIDByDateRange/getPRIDByDateRange
@@ -165,6 +173,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_missing_requesttime:
       endPoint: /preregistration/v1/sync
+      description: Retrieve the PRID within the specified date range for the missing request time 
       role: regproc
       restMethod: post
       inputTemplate: preReg/GetPRIDByDateRange/getPRIDByDateRange
@@ -186,6 +195,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_Invalid_requesttime:
       endPoint: /preregistration/v1/sync
+      description: Retrieve the PRID within the specified date range for the invalid request time
       role: regproc
       restMethod: post
       inputTemplate: preReg/GetPRIDByDateRange/getPRIDByDateRange
@@ -207,6 +217,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_Invalid_registrationCenterId:
       endPoint: /preregistration/v1/sync
+      description: Retrieve the PRID within the specified date range for the invalid registration center ID
       role: regproc
       restMethod: post
       inputTemplate: preReg/GetPRIDByDateRange/getPRIDByDateRange
@@ -228,6 +239,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_blank_registrationCenterId:
       endPoint: /preregistration/v1/sync
+      description: Retrieve the PRID within the specified date range for the blank registration center ID
       role: regproc
       restMethod: post
       inputTemplate: preReg/GetPRIDByDateRange/getPRIDByDateRange
@@ -249,6 +261,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_missing_registrationCenterId:
       endPoint: /preregistration/v1/sync
+      description:  Retrieve the PRID within the specified date range for the missing registration center ID
       role: regproc
       restMethod: post
       inputTemplate: preReg/GetPRIDByDateRange/getPRIDByDateRange
@@ -270,6 +283,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_missing_fromDate:
       endPoint: /preregistration/v1/sync
+      description: Retrieve the PRID within the specified date range where the fromDate is missing
       role: regproc
       restMethod: post
       inputTemplate: preReg/GetPRIDByDateRange/getPRIDByDateRange
@@ -291,6 +305,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_Invalid_fromDate:
       endPoint: /preregistration/v1/sync
+      description: Retrieve the PRID within the specified date range where the fromDate is missing
       role: regproc
       restMethod: post
       inputTemplate: preReg/GetPRIDByDateRange/getPRIDByDateRange
@@ -312,6 +327,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_blank_fromDate:
       endPoint: /preregistration/v1/sync
+      description: Retrieve the PRID within the specified date range where the fromDate field is blank
       role: regproc
       restMethod: post
       inputTemplate: preReg/GetPRIDByDateRange/getPRIDByDateRange
@@ -333,6 +349,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_blank_toDate:
       endPoint: /preregistration/v1/sync
+      description: Retrieve the PRID within the specified date range where the toDate field is blank
       role: regproc
       restMethod: post
       inputTemplate: preReg/GetPRIDByDateRange/getPRIDByDateRange
@@ -354,6 +371,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_missing_toDate:
       endPoint: /preregistration/v1/sync
+      description: Retrieve the PRID within the specified date range where the toDate field is missing 
       role: regproc
       restMethod: post
       inputTemplate: preReg/GetPRIDByDateRange/getPRIDByDateRange
@@ -375,6 +393,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_Invalid_toDate:
       endPoint: /preregistration/v1/sync
+      description: Retrieve the PRID within the specified date range where the 'toDate' field is invalid
       role: regproc
       restMethod: post
       inputTemplate: preReg/GetPRIDByDateRange/getPRIDByDateRange
