--- a/apitest/src/main/resources/preReg/SendNotifications/SendNotifications.yml
+++ b/apitest/src/main/resources/preReg/SendNotifications/SendNotifications.yml
@@ -1,6 +1,7 @@
 SendNotifications:
    Prereg_SendNotifications_All_Valid_Smoke:
       endPoint: /preregistration/v1/notification
+      description: Trigger notification with valid data
       role: batch
       checkErrorsOnlyInResponse: true
       restMethod: post
@@ -23,6 +24,7 @@ SendNotifications:
 }'
    Prereg_SendNotifications_Notify_All_Valid_Smoke:
       endPoint: /preregistration/v1/notification/notify
+      description: Trigger notification to notify with valid data
       role: batch
       checkErrorsOnlyInResponse: true
       restMethod: post
@@ -44,6 +46,7 @@ SendNotifications:
 }'
    Prereg_SendNotifications_InValid_id:
       endPoint: /preregistration/v1/notification
+      description: Trigger notification with an invalid ID
       role: batch
       restMethod: post
       inputTemplate: preReg/SendNotifications/sendNotifications_$LANGNUMBER$
@@ -70,6 +73,7 @@ SendNotifications:
 }'
    Prereg_SendNotifications_InValid_preRegId:
       endPoint: /preregistration/v1/notification
+      description: Trigger notification with an invalid pre-registration ID
       role: batch
       restMethod: post
       inputTemplate: preReg/SendNotifications/sendNotifications_$LANGNUMBER$
