--- a/apitest/src/main/resources/preReg/createPrereg/createPrereg.yml
+++ b/apitest/src/main/resources/preReg/createPrereg/createPrereg.yml
@@ -1,8 +1,8 @@
 CreatePrereg:
    Prereg_CreatePrereg_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/applications/prereg
-      role: batch
       description: Creating demographic details with valid data
+      role: batch
       checkErrorsOnlyInResponse: true
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
@@ -22,8 +22,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_book_appoinment_without_update_prereg_status_sid:
       endPoint: /preregistration/v1/applications/prereg
-      role: batch
       description: Creating preregistration for booking an appointment without updating preregistration status
+      role: batch
       checkErrorsOnlyInResponse: true
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
@@ -43,8 +43,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_All_Valid_Smoke_UpdateDocRefID_sid:
       endPoint: /preregistration/v1/applications/prereg
-      role: batch
       description: Creating preregistration with a valid updated document reference ID
+      role: batch
       checkErrorsOnlyInResponse: true
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
@@ -65,8 +65,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_All_Valid_Smoke_BookByPRID_sid:
       endPoint: /preregistration/v1/applications/prereg
-      role: batch
       description: Creating preregistration for a valid booking using the PRID (Patient Registration ID)
+      role: batch
       checkErrorsOnlyInResponse: true
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
@@ -88,8 +88,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_Valid_Smoke_sid:
       endPoint: /preregistration/v1/applications/prereg
-      role: batch
       description: Creating demographic details with valid data
+      role: batch
       checkErrorsOnlyInResponse: true
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
@@ -110,8 +110,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_Smoke_alldel_sid:
       endPoint: /preregistration/v1/applications/prereg
+      description: Creating preregistration to delete data
       role: batch
-      Description: Creating preregistration to delete data
       checkErrorsOnlyInResponse: true
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
@@ -132,8 +132,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_Smoke_CancellAppointment_sid:
       endPoint: /preregistration/v1/applications/prereg
+      description: Creating preregistration data to cancel a booked appointment
       role: batch
-      Description: Creating preregistration data to cancel a booked appointment
       checkErrorsOnlyInResponse: true
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
@@ -154,8 +154,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_Smoke_CancelApplicationsAppointment_sid:
       endPoint: /preregistration/v1/applications/prereg
+      description: Creating preregistration and cancelling the appointment after booking
       role: batch
-      Description: Creating preregistration and cancelling the appointment after booking
       checkErrorsOnlyInResponse: true
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
@@ -176,8 +176,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_All_Valid_Smoke_for_expiry_sid:
       endPoint: /preregistration/v1/applications/prereg
-      role: batch
       description: Creating preregistration, booking an appointment, and checking the expiration status if the user does not reach the center by the scheduled slot time
+      role: batch
       checkErrorsOnlyInResponse: true
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
@@ -197,8 +197,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_in_Valid_id_sid:
       endPoint: /preregistration/v1/applications/prereg
-      role: batch
       description: Creating demographic details with an invalid field ID
+      role: batch
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
       outputTemplate: preReg/error
@@ -223,8 +223,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_missing_id_sid:
       endPoint: /preregistration/v1/applications/prereg
+      description: Creating preregistration with a missing ID
       role: batch
-      description:Creating preregistration with a missing ID
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
       outputTemplate: preReg/error
@@ -249,8 +249,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_blank_id_sid:
       endPoint: /preregistration/v1/applications/prereg
-      role: batch
       description: Creating preregistration with a blank ID
+      role: batch
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
       outputTemplate: preReg/error
@@ -275,8 +275,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_missing_langCode_sid:
       endPoint: /preregistration/v1/applications/prereg
-      role: batch
       description: Creating preregistration without specifying a langcode
+      role: batch
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
       outputTemplate: preReg/error
@@ -301,8 +301,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_invalid_langCode_sid:
       endPoint: /preregistration/v1/applications/prereg
-      role: batch
       description: Creating preregistration with an invalid langcode 
+      role: batch
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
       outputTemplate: preReg/error
@@ -327,8 +327,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_invalid_email_sid:
       endPoint: /preregistration/v1/applications/prereg
-      role: batch
       description: Creating preregistration with an invalid email address
+      role: batch
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
       outputTemplate: preReg/error
@@ -353,8 +353,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_invalid_requesttime_format_sid:
       endPoint: /preregistration/v1/applications/prereg
-      role: batch
       description: Creating preregistration with an invalid request-time format
+      role: batch
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
       outputTemplate: preReg/error
@@ -379,8 +379,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_missing_requesttime_sid:
       endPoint: /preregistration/v1/applications/prereg
-      role: batch
       description: Creating preregistration without specifying a request time
+      role: batch
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
       outputTemplate: preReg/error
@@ -405,8 +405,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_previous_date_sid:
       endPoint: /preregistration/v1/applications/prereg
-      role: batch
       description: Creating preregistration with a previous date
+      role: batch
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
       outputTemplate: preReg/error
@@ -431,8 +431,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_invalid_version_sid:
       endPoint: /preregistration/v1/applications/prereg
+      description: Creating preregistration with an invalid version
       role: batch
-      Description: Creating preregistration with an invalid version
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
       outputTemplate: preReg/error
@@ -457,8 +457,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_missing_version_sid:
       endPoint: /preregistration/v1/applications/prereg
-      role: batch
       description: Creating preregistration without specifying a version
+      role: batch
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
       outputTemplate: preReg/error
@@ -484,8 +484,8 @@ CreatePrereg:
 
    Prereg_CreatePrereg_Invalid_PostalCode_Neg:
       endPoint: /preregistration/v1/applications/prereg
-      role: batch
       description: Creating preregistration with an invalid postal code
+      role: batch
       checkErrorsOnlyInResponse: true
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
@@ -512,8 +512,8 @@ CreatePrereg:
 
    Prereg_CreatePrereg_SpacialCharacter_PostalCode_Neg:
       endPoint: /preregistration/v1/applications/prereg
-      role: batch
       description: Creating preregistration with a special character in the postal code
+      role: batch
       checkErrorsOnlyInResponse: true
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
@@ -539,8 +539,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_Invalid_OTP_Neg:
       endPoint: /preregistration/v1/applications/prereg
-      role: invalidBatch
       description: Creating preregistration with an invalid OTP
+      role: invalidBatch
       checkErrorsOnlyInResponse: true
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
@@ -566,8 +566,8 @@ CreatePrereg:
 }'   
    Prereg_CreatePrereg_All_Valid_Smoke_date_verification_sid:
       endPoint: /preregistration/v1/applications/prereg
-      role: batch
       description: Creating preregistration with an invalid OTP
+      role: batch
       checkErrorsOnlyInResponse: true
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
@@ -587,8 +587,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_with_special_characters_date:
       endPoint: /preregistration/v1/applications/prereg
-      role: batch
       description: Creating preregistration with special characters on the date filed 
+      role: batch 
       checkErrorsOnlyInResponse: true
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
@@ -613,8 +613,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_with_future_date:
       endPoint: /preregistration/v1/applications/prereg
-      role: batch
       description: Creating preregistration with a future date
+      role: batch
       checkErrorsOnlyInResponse: true
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
@@ -634,8 +634,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_cancell_incomplete_prid_sid:
       endPoint: /preregistration/v1/applications/prereg
-      role: batch
       description: Creating preregistration and canceling the incomplete PRID
+      role: batch
       checkErrorsOnlyInResponse: true
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
@@ -655,8 +655,8 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_cancell_pending_appoinment_prid_sid:
       endPoint: /preregistration/v1/applications/prereg
-      role: batch
-      descrption: Creating preregistration and canceling pending appointment using PRID 
+      description: Creating preregistration and canceling pending appointment using PRID
+      role: batch 
       checkErrorsOnlyInResponse: true
       restMethod: post
       inputTemplate: preReg/createPrereg/createPrereg
